# wasi-examples

./: README.md
cli/: Cargo.toml  README.md
cli/src/: bindings.rs  lib.rs
cli/wit/: world.wit
hello/: Cargo.toml  README.md
http/: Cargo.toml  README.md
http-client/: Cargo.toml  README.md
http-client/src/: bindings.rs  lib.rs
http-server/: Cargo.toml
http-server/src/: lib.rs
http/src/: bindings.rs  lib.rs
http/wit/: world.wit
time/: README.md  main.go
