[package]
name = "cli"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wasi-examples-cli"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:sockets" = { path = "wit/deps/sockets" }
"wasi:random" = { path = "wit/deps/random" }

[dependencies]
bitflags = "2.5.0"
clap = { version = "4.5.4", features = ["derive"] }
wit-bindgen-rt = "0.24.0"

[build-dependencies]
wit-deps = "0.3.1"
anyhow = "1.0.82"

# reduce wasm binary size
[profile.release]
lto = true
strip = "symbols"
